// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Matches default snapshot 1`] = `
.emotion-0 {
  display: grid;
  grid-auto-flow: column;
  margin: 5px 0px;
  border-radius: var(--input-border-radius);
  overflow: hidden;
}

.emotion-0>* {
  margin: 0;
}

.emotion-0>* {
  --input-border-radius: 0;
}

.emotion-0>*+* {
  border-left: white 1px solid;
}

.emotion-2 {
  -webkit-transition: filter 0.3s ease;
  transition: filter 0.3s ease;
  -webkit-filter: brightness(100%);
  filter: brightness(100%);
  border: none;
  border-radius: var(--input-border-radius);
  font-size: inherit;
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
  margin: 5px 0px;
  color: inherit;
  background-color: var(--primary);
  padding: 5px 15px;
}

.emotion-2:hover,
.emotion-2:focus {
  cursor: pointer;
}

.emotion-2:active,
.emotion-2:disabled {
  -webkit-filter: brightness(70%);
  filter: brightness(70%);
}

.emotion-2:hover,
.emotion-2:focus {
  cursor: pointer;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <button
      class="emotion-2 emotion-3"
      type="button"
    >
      Test
    </button>
    <button
      class="emotion-2 emotion-3"
      type="button"
    >
      Test
    </button>
    <button
      class="emotion-2 emotion-3"
      type="button"
    >
      Test
    </button>
  </div>
</div>
`;

exports[`Matches hasGap and uniform snapshot 1`] = `
.emotion-0 {
  display: grid;
  grid-auto-flow: column;
  margin: 5px 0px;
  gap: 5px;
  grid-auto-columns: 1fr;
}

.emotion-0>* {
  margin: 0;
}

.emotion-2 {
  -webkit-transition: filter 0.3s ease;
  transition: filter 0.3s ease;
  -webkit-filter: brightness(100%);
  filter: brightness(100%);
  border: none;
  border-radius: var(--input-border-radius);
  font-size: inherit;
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
  margin: 5px 0px;
  color: inherit;
  background-color: var(--primary);
  padding: 5px 15px;
}

.emotion-2:hover,
.emotion-2:focus {
  cursor: pointer;
}

.emotion-2:active,
.emotion-2:disabled {
  -webkit-filter: brightness(70%);
  filter: brightness(70%);
}

.emotion-2:hover,
.emotion-2:focus {
  cursor: pointer;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <button
      class="emotion-2 emotion-3"
      type="button"
    >
      Test
    </button>
    <button
      class="emotion-2 emotion-3"
      type="button"
    >
      Test
    </button>
    <button
      class="emotion-2 emotion-3"
      type="button"
    >
      Test
    </button>
  </div>
</div>
`;

exports[`Matches hasGap snapshot 1`] = `
.emotion-0 {
  display: grid;
  grid-auto-flow: column;
  margin: 5px 0px;
  gap: 5px;
}

.emotion-0>* {
  margin: 0;
}

.emotion-2 {
  -webkit-transition: filter 0.3s ease;
  transition: filter 0.3s ease;
  -webkit-filter: brightness(100%);
  filter: brightness(100%);
  border: none;
  border-radius: var(--input-border-radius);
  font-size: inherit;
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
  margin: 5px 0px;
  color: inherit;
  background-color: var(--primary);
  padding: 5px 15px;
}

.emotion-2:hover,
.emotion-2:focus {
  cursor: pointer;
}

.emotion-2:active,
.emotion-2:disabled {
  -webkit-filter: brightness(70%);
  filter: brightness(70%);
}

.emotion-2:hover,
.emotion-2:focus {
  cursor: pointer;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <button
      class="emotion-2 emotion-3"
      type="button"
    >
      Test
    </button>
    <button
      class="emotion-2 emotion-3"
      type="button"
    >
      Test
    </button>
    <button
      class="emotion-2 emotion-3"
      type="button"
    >
      Test
    </button>
  </div>
</div>
`;

exports[`Matches uniform snapshot 1`] = `
.emotion-0 {
  display: grid;
  grid-auto-flow: column;
  margin: 5px 0px;
  border-radius: var(--input-border-radius);
  overflow: hidden;
  grid-auto-columns: 1fr;
}

.emotion-0>* {
  margin: 0;
}

.emotion-0>* {
  --input-border-radius: 0;
}

.emotion-0>*+* {
  border-left: white 1px solid;
}

.emotion-2 {
  -webkit-transition: filter 0.3s ease;
  transition: filter 0.3s ease;
  -webkit-filter: brightness(100%);
  filter: brightness(100%);
  border: none;
  border-radius: var(--input-border-radius);
  font-size: inherit;
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
  margin: 5px 0px;
  color: inherit;
  background-color: var(--primary);
  padding: 5px 15px;
}

.emotion-2:hover,
.emotion-2:focus {
  cursor: pointer;
}

.emotion-2:active,
.emotion-2:disabled {
  -webkit-filter: brightness(70%);
  filter: brightness(70%);
}

.emotion-2:hover,
.emotion-2:focus {
  cursor: pointer;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <button
      class="emotion-2 emotion-3"
      type="button"
    >
      Test
    </button>
    <button
      class="emotion-2 emotion-3"
      type="button"
    >
      Test
    </button>
    <button
      class="emotion-2 emotion-3"
      type="button"
    >
      Test
    </button>
  </div>
</div>
`;
